src/amd/common/ac_nir_to_llvm.c
@@ -2880,7 +2880,7 @@ get_dw_address(struct nir_to_llvm_context *ctx,
 						    LLVMConstInt(ctx->ac.i32, 4, false), ""), "");
 	else if (const_index && !compact_const_index)
 		dw_addr = LLVMBuildAdd(ctx->builder, dw_addr,
-				       LLVMConstInt(ctx->ac.i32, const_index, false), "");
+				       LLVMConstInt(ctx->ac.i32, const_index * 4, false), "");
 
 	dw_addr = LLVMBuildAdd(ctx->builder, dw_addr,
 			       LLVMConstInt(ctx->ac.i32, param * 4, false), "");
